[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_16/Pawn_16_Head.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pawns/Pawn_16_Parts/Pawn_16_Head.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Down_Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_16_Head_Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Down_Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_16_Head_Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_16_Head_Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Left_Down"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_16_Head_Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Left_Up"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_16_Head_Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_16_Head_Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Right_Down"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_16_Head_Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Right_Up"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_16_Head_Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Up_Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_16_Head_Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Up_Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_16_Head_Mid:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Blink"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid/Pawn_16_Head_Top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 3, 2 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Idle"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid/Pawn_16_Head_Top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 3.2, 3.3, 3.4, 3.5, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 2, 2, 3, 4, 5, 3, 2 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Wink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_16_Head_Mid/Pawn_16_Head_Top:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4, 3, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0 ],
"method": "play_eye"
} ]
}

[node name="Pawn_16_Head" type="Node2D"]
script = ExtResource( 2 )

[node name="Pawn_16_Head_Shield" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
hframes = 8
vframes = 2

[node name="Pawn_16_Head_Back" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 2

[node name="Pawn_16_Head_Mid" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 2
frame = 1

[node name="Pawn_16_Head_Top" type="Sprite" parent="Pawn_16_Head_Mid"]
texture = ExtResource( 1 )
hframes = 8
vframes = 2
frame = 3

[node name="AnimationPlayer_Dir" type="AnimationPlayer" parent="."]
anims/Down_Left = SubResource( 1 )
anims/Down_Right = SubResource( 2 )
anims/Left = SubResource( 3 )
anims/Left_Down = SubResource( 4 )
anims/Left_Up = SubResource( 5 )
anims/Right = SubResource( 6 )
anims/Right_Down = SubResource( 7 )
anims/Right_Up = SubResource( 8 )
anims/Up_Left = SubResource( 9 )
anims/Up_Right = SubResource( 10 )

[node name="AnimationPlayer_Eye" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 11 )
anims/Idle = SubResource( 12 )
anims/Wink = SubResource( 13 )
